--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -12,7 +12,11 @@ body > div {
 .mesh-3 {
   background: fixed;
   background-color: rgb(252, 165, 165);
-  background-image: radial-gradient(at 79% 79%, rgb(236, 254, 255) 0, transparent 49%),
+  background-image: radial-gradient(
+      at 79% 79%,
+      rgb(236, 254, 255) 0,
+      transparent 49%
+    ),
     radial-gradient(at 22% 84%, rgb(254, 249, 195) 0, transparent 47%),
     radial-gradient(at 55% 48%, rgb(161, 74, 89) 0, transparent 27%),
     radial-gradient(at 81% 52%, rgb(7, 89, 133) 0, transparent 32%),
